Fix z-index peta layers

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -234,11 +234,11 @@ body {
 
 .ol-scale-line {
   left: 40px;
-  z-index: 100100;
+  z-index: 100099;
 }
 
 .ol-overviewmap {
-  z-index: 100099;
+  z-index: 100098;
   bottom:5px;
   .ol-overviewmap-map {
     margin-bottom: 25px;
